<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodel.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fragment_horizontal_margin">

        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/shoe_details_margin"
            android:text="@string/shoe_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/shoe_padding"
            android:layout_width="@dimen/shoe_edit_text_width"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_name_text"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_text"
            app:layout_constraintTop_toTopOf="@+id/shoe_name_text" />

        <TextView
            android:id="@+id/shoe_company_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shoe_details_margin"
            android:layout_width="wrap_content"
            android:text="@string/shoe_detail_company"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

        <EditText
            android:id="@+id/shoe_company_edit"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/shoe_edit_text_width"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_company_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toTopOf="@+id/shoe_company_text" />

        <TextView
            android:id="@+id/shoe_size_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shoe_details_margin"
            android:layout_width="wrap_content"
            android:text="@string/shoe_detail_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_text" />

        <EditText
            android:id="@+id/shoe_size_edit"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/shoe_edit_text_width"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_size_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_edit"
            app:layout_constraintTop_toTopOf="@+id/shoe_size_text" />

        <TextView
            android:id="@+id/shoe_description_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shoe_details_margin"
            android:layout_width="wrap_content"
            android:text="@string/shoe_detail_description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text" />

        <EditText
            android:id="@+id/shoe_description_edit"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/shoe_edit_text_width"
            android:text="@={viewModel.shoeDescription}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_description_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edit"
            app:layout_constraintTop_toTopOf="@+id/shoe_description_text" />

        <Button
            android:backgroundTint="@android:color/darker_gray"
            android:id="@+id/cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/design_default_color_on_secondary"
            android:layout_marginTop="@dimen/shoe_details_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_edit" />

        <Button
            android:id="@+id/save_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button"
            style="@style/DefaultButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>